# dnd

./: README.md  ai_response_prep.txt  api_call.py  api_reader.py  app.py  combat.py  combat_handler.py  file  file.txt  main.py  monster.py  openAI.py  player.py  pyproject.toml  setup.py  todo.md  weapon.py
static/: index.css
static/script/: alert.js  options_layout.js
static/templates/: charatcer_card.html  setup.html
templates/: base.html  combat.html  index.html  main_layout.html  setup.html  story.html
